--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d9eea3d6",
+   "metadata": {},
+   "source": [
+    "## Import library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a0f4aa9",
+   "id": "a5287fe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +23,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fcf4f66",
+   "metadata": {},
+   "source": [
+    "## Check python enviroment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22243fc1",
+   "id": "005cd4b5",
    "metadata": {},
    "outputs": [
     {
@@ -33,10 +49,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6342ebfe",
+   "metadata": {},
+   "source": [
+    "## Preprocess and analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f03bbcdc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -293,52 +319,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ee404aa5",
+   "cell_type": "markdown",
+   "id": "2ca34ffa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1323 entries, 0 to 1322\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   X                  1323 non-null   float64\n",
-      " 1   Y                  1323 non-null   float64\n",
-      " 2   OBJECTID           1323 non-null   int64  \n",
-      " 3   BLOCK_X            1323 non-null   int64  \n",
-      " 4   BLOCK_Y            1323 non-null   int64  \n",
-      " 5   DCS_LAST_MOD_DTM   1323 non-null   object \n",
-      " 6   SEXOFFENDERCODE    1323 non-null   object \n",
-      " 7   ADDDATE            1323 non-null   object \n",
-      " 8   LASTNAME           1323 non-null   object \n",
-      " 9   FIRSTNAME          1323 non-null   object \n",
-      " 10  ALIASES            787 non-null    object \n",
-      " 11  MAXCLASSIFICATION  1323 non-null   object \n",
-      " 12  BIRTHDATE          1323 non-null   object \n",
-      " 13  HEIGHTNUM          1323 non-null   int64  \n",
-      " 14  WEIGHTNUM          1323 non-null   int64  \n",
-      " 15  EYECOLOR           1323 non-null   object \n",
-      " 16  HAIRCOLOR          1323 non-null   object \n",
-      " 17  MARKINGS           408 non-null    object \n",
-      " 18  REGISTRATIONDATE   1323 non-null   object \n",
-      " 19  TYPE               1323 non-null   object \n",
-      " 20  DISTRICT           1319 non-null   float64\n",
-      " 21  PSA                1318 non-null   float64\n",
-      " 22  BLOCKNAME          1323 non-null   object \n",
-      " 23  QUADRANT           1323 non-null   object \n",
-      " 24  ZIP                1323 non-null   int64  \n",
-      "dtypes: float64(4), int64(6), object(15)\n",
-      "memory usage: 258.5+ KB\n"
-     ]
-    }
-   ],
    "source": [
-    "data.info()"
+    "## Question:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79543b8f",
+   "metadata": {},
+   "source": [
+    "### 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f514811",
+   "metadata": {},
+   "source": [
+    "### 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728f9f85",
+   "metadata": {},
+   "source": [
+    "### 3."
    ]
   }
  ],
