--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "d9eea3d6",
    "metadata": {},
    "source": [
-    "## Import library"
+    "# Import library"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "id": "4fcf4f66",
    "metadata": {},
    "source": [
-    "## Check python enviroment"
+    "## Check python env"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "id": "6342ebfe",
    "metadata": {},
    "source": [
-    "## Preprocess and analysis"
+    "## Preprocess and Analysis"
    ]
   },
   {
